--- a/app/assets/stylesheets/masonry.css.scss
+++ b/app/assets/stylesheets/masonry.css.scss
@@ -13,17 +13,17 @@ article > ul {
 
 .alignleft { float: left; }
 
-.box100 {
+.tile1 {
   height: 100px;
   background:#68BCBC;
 }
 
-.box200 {
+.tile2 {
   height: 200px;
   background:#71AAD7;
 }
 
-.box300 {
+.tile3 {
   height: 300px;
   background:#EBB056;
 }
