--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,12 +1,12 @@
 <div class="main">
   <article>
-    <ul class="alignleft box100" id="1" onclick="read(1)"><li>aaa</li></ul>
-    <ul class="alignleft box200" id="2" onclick="read(2)"><li>bbb</li></ul>
-    <ul class="alignleft box100" id="3" onclick="read(3)"><li>ccc</li></ul>
-    <ul class="alignleft box200" id="4" onclick="read(4)"><li>ddd</li></ul>
-    <ul class="alignleft box200" id="5" onclick="read(5)"><li>eee</li></ul>
-    <ul class="alignleft box300" id="6" onclick="read(6)"><li>fff</li></ul>
-    <ul class="alignleft box100" id="7" onclick="read(7)"><li>ggg</li></ul>
+    <ul class="alignleft tile1" id="1" onclick="read(1)"><li>aaa</li></ul>
+    <ul class="alignleft tile2" id="2" onclick="read(2)"><li>bbb</li></ul>
+    <ul class="alignleft tile1" id="3" onclick="read(3)"><li>ccc</li></ul>
+    <ul class="alignleft tile2" id="4" onclick="read(4)"><li>ddd</li></ul>
+    <ul class="alignleft tile2" id="5" onclick="read(5)"><li>eee</li></ul>
+    <ul class="alignleft tile3" id="6" onclick="read(6)"><li>fff</li></ul>
+    <ul class="alignleft tile1" id="7" onclick="read(7)"><li>ggg</li></ul>
   </article>
 
 </div>
