Imp. Site List & Reg.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-static-top navbar-fixed-top" role="navigation">
-  <%= link_to "", "#", :class => "fa fa-bars hicon" %>
+  <%= link_to "", mains_sitelist_path, :class => "fa fa-bars hicon" %>
   <%= link_to "XAPP7", root_path, :class => "navbar-logo" %>
   <%= link_to "ログイン", "#", :class => "btn btn-danger btn-sm" %>
 </header>
