--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -10,6 +10,14 @@ body {
   background: #e0e0e0;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+  &:hover {
+    color: black;
+    text-decoration: none;
+  }
+}
 
 /* NavBar */
 header {
