--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,10 @@
 <header class="navbar navbar-static-top navbar-fixed-top" role="navigation">
   <%= link_to "", mains_menu_path, :class => "fa fa-bars hicon" %>
   <%= link_to "XAPP7", root_path, :class => "navbar-logo" %>
-  <%= link_to "ログイン", "#", :class => "btn btn-danger btn-sm" %>
+  <!-- ログイン状態によってメニューを変化 -->
+  <% if user_signed_in? %>
+    <%= link_to "ログアウト", destroy_user_session_path, method: :delete, :class => "btn btn-danger btn-sm" %>
+  <% else %>
+    <%= link_to "ログイン", new_user_session_path, :class => "btn btn-danger btn-sm" %>
+  <% end %>
 </header>
